# Devious-Editor-Remastered

./: CMakeLists.txt  failed_logs_v5.txt  failed_logs_v7.txt  failed_logs_v9.txt  jobs_v6.json  jobs_v8.json  jobs_v9.json  macos_logs_v6.txt  macos_logs_v8.txt  mod.json  windows_logs_v11.txt  windows_logs_v6.txt  windows_logs_v8.txt
.github/workflows/: build.yml
Documents/Anti-Gravity Projects/devious Editor Remastered/: CMakeLists.txt
Documents/Anti-Gravity Projects/devious Editor Remastered/.github/workflows/: build.yml
src/: ColabManager.cpp  ColabManager.hpp  main.cpp
src/hooks/: EditorHooks.cpp  EditorHooks.hpp
src/network/: Discovery.cpp  Discovery.hpp  NetworkTypes.hpp  Session.cpp  Session.hpp
src/ui/: CollabPanel.cpp  CollabPanel.hpp  PresenceLayer.cpp  PresenceLayer.hpp
